EDSC-4228: fix snyk vulns for braces and browserify-sign
braces 3.0.2 -> 3.0.3
browserify-sign 4.2.1 -> 4.2.3

--- a/package.json
+++ b/package.json
@@ -122,7 +122,9 @@
     "axios-retry": "^3.2.4",
     "babel-loader": "^8.2.5",
     "bootstrap": "^4.6.1",
+    "braces": "^3.0.3",
     "browser-detect": "^0.2.28",
+    "browserify-sign": "^4.2.2",
     "camelcase-keys": "^6.2.2",
     "circular-dependency-plugin": "^5.2.2",
     "classnames": "^2.3.1",
